# sampler-cli

./: .gitignore  CHANGELOG.md  HANDOFF_REPORT.md  INSTALL.md  LICENSE  PLAN.md  PLAN_1.md  PLAN_2.md  README.md  RELEASE.md  TODO.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  CLI_REFERENCE.md
extensions/pi/: sampler-pi-extension.ts  tsconfig.json
scripts/: bump_version.py
skills/pi/sampler/: SKILL.md
src/sampler/: __main__.py  config.py  db.py  embeddings.py  models.py
src/sampler/cli/: main.py  render.py
src/sampler/indexer/: builder.py  discover.py  embedder.py  imports.py  store.py
src/sampler/indexer/parsers/: base.py  go.py  python.py  typescript.py  vue.py
src/sampler/mcp/: server.py
src/sampler/query/: engine.py  semantic.py
src/sampler/viz/: __init__.py  bus.py  canvas.py  discover_emit.py  engine.py  events.py  headline.py  layout_algo.py  live.py  pipeline.py
tests/: test_canvas_graph.py  test_cli.py  test_config.py  test_db.py  test_discover.py  test_embeddings.py  test_events.py  test_go_parser.py  test_headline.py  test_imports.py  test_index_query.py  test_python_parser.py  test_relationships.py  test_render_bars.py  test_semantic.py  test_smoke.py  test_stale_code.py  test_typescript_parser.py  test_viz_engine.py  test_viz_layout.py  test_viz_pipeline.py  test_vue_parser.py
typings/: pi-extensions.d.ts
