[project]
name = "sampler-cli"
version = "0.1.2"
description = "CLI indexer for code navigation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.23.0",
    "gitignore-parser>=0.1.11",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
    "mypy>=1.7.0",
]
mcp = ["fastmcp>=0.1.0"]
semantic = ["sentence-transformers>=2.2.0"]

[project.scripts]
sampler = "sampler.cli.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
