[project]
name = "sampler-cli"
version = "0.2.0"
description = "Token-efficient CLI for indexing and searching code symbols (Python-first, designed for minimal LLM/agent context size)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Samuel Ignacio Carmona Rodriguez" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.23.0",
    "gitignore-parser>=0.1.11",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
    "mypy>=1.7.0",
]
mcp = ["fastmcp>=0.1.0"]
semantic = ["sentence-transformers>=2.2.0"]

[project.scripts]
sampler = "sampler.cli.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/sicr0/sampler-cli"
Repository = "https://github.com/sicr0/sampler-cli"
Issues = "https://github.com/sicr0/sampler-cli/issues"
